@startuml
!theme plain
title Diagramme de Classes - Your Car Your Way 

class User {
  - id : Long
  - email : String
  - password : String
  - firstName : String
  - lastName : String
  - dateOfBirth : Date
  - phoneNumber : String
  - address : String
  - drivingLicenseNumber : String
  - createdAt : Date
}

class Vehicle {
  - id : Long
  - brand : String
  - model : String
  - year : Integer
  - licensePlate : String
  - dailyRate : BigDecimal
  - available : Boolean
}

class Booking {
  - id : Long
  - startDate : Date
  - endDate : Date
  - pickupLocation : String
  - returnLocation : String
  - totalAmount : BigDecimal
  - status : String
  - createdAt : Date
}

class Payment {
  - id : Long
  - amount : BigDecimal
  - currency : String
  - paymentMethod : String
  - transactionId : String
  - status : String
  - createdAt : Date
}

class Agency {
  - id : Long
  - name : String
  - address : String
  - phoneNumber : String
  - email : String
  - openingHours : String
}

class VehicleCategory {
  - id : Long
  - code : String
  - name : String
  - description : String
  - passengerCapacity : Integer
}

class Location {
  - id : Long
  - city : String
  - country : String
  - zipCode : String
}

' Relations principales
User ||--o{ Booking : "fait"
Booking ||--|| Payment : "a"
Booking ||--|| Vehicle : "réserve"

' Relations véhicules et agences
Agency ||--o{ Vehicle : "possède"
VehicleCategory ||--o{ Vehicle : "catégorise"
Location ||--o{ Agency : "situe"

@enduml